style.css
:root {
  --primary-color: #659365;
  --secondary-color: #073340;
  --font-size-medium: 1.125rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 100%;
}

body {
  font-family: sans-serif;
}

header {
  display: flex;
  flex-direction: column;
  background: linear-gradient(
    to right,
    var(--primary-color),
    var(--secondary-color)
  );
  min-height: 100vh;
  padding: 0 25px;
}

nav {
  position: relative;
  display: flex;
  padding-top: 60px;
  justify-content: space-between;
  align-items: start;
  color: #fff;
  max-width: 1200px;
}

.logo {
  font-size: 1.5rem;
}

.nav-links {
  display: none;
}

.btn-contact {
  width: 100px;
  font-size: 13px;
  font-weight: 600;
  background-color: #b9f2a1;
  padding: 8px;
  border-radius: 10px;
  border: none;
  outline: none;
}

@media screen and (min-width: 900px) {
  .nav-links {
    display: flex;
    list-style-type: none;
    gap: 24px;
  }

  .nav-links li a {
    text-decoration: none;
    color: #fff;
    font-weight: 500;
    font-size: var(--font-size-medium);
  }

  .nav-links li a:hover {
    color: #b9f2a1;
  }

  .ham-icon {
    display: none;
  }
}

.hero {
  color: #fff;
  padding-top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.introduction-text {
  text-align: center;
}

.introduction-text h1 {
  font-size: 2.2rem;
}

.introduction-text p {
  padding-top: 30px;
  font-size: 1rem;
}

.text-green-light {
  color: #b9f2a1;
}

.marketing-image {
  padding-top: 30px;
}

.hero-buttons {
  display: flex;
  flex-direction: column;
  padding-top: 30px;
  padding-bottom: 30px;
  align-items: center;
  gap: 15px;
}

.hero-buttons button {
  width: 200px;
  padding: 15px 40px;
  border-radius: 10px;
  outline: none;
  border: none;
  font-weight: 600;
}

.hero-buttons .get-started {
  background-color: #b9f2a1;
}

.hero-buttons .explore-more {
  border: 2px solid #b9f2a1;
  background-color: transparent;
  color: #fff;
}

